--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/internacion/routes/patient-discharge/patient-discharge.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/internacion/routes/patient-discharge/patient-discharge.component.html
@@ -5,32 +5,50 @@
 			<form [formGroup]="dischargeForm" (ngSubmit)="save()">
 
 				<span [translate]="'internaciones.discharge.DISCHARGE_DATE'"></span> *
-				<div>
-					<mat-form-field appearance="outline">
-						<input formControlName="dischargeDate" id="dischargeDate" matInput [max]="today" [min]="minDischargeDate"
-								[matDatepicker]="picker2" placeholder="{{'internaciones.discharge.DISCHARGE_DATE' | translate}}">
-						<mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
-						<mat-datepicker #picker2></mat-datepicker>
+				<section>
+					<div class="form-row" fxLayoutGap="5px">
+						<mat-form-field class="date" appearance="outline">
+							<input formControlName="date" id="date" matInput [matDatepicker]="datePicker"
+								[value]="today" [max]="today" [min]="minDischargeDate"
+								placeholder="{{'internaciones.discharge.DISCHARGE_DATE' | translate}}">
 
-						<mat-error [translate]="'forms.REQUIRED'"></mat-error>
-					</mat-form-field>
-				</div>
+							<mat-datepicker-toggle matSuffix [for]="datePicker"></mat-datepicker-toggle>
+							<mat-datepicker #datePicker></mat-datepicker>
+
+							<mat-error *ngIf="hasError(dischargeForm, 'required', 'date') else invalidDate"
+								translate="internaciones.discharge.REQUIRED"></mat-error>
+							<ng-template #invalidDate>
+								<mat-error translate="internaciones.discharge.INVALID_DATE"></mat-error>
+							</ng-template>
+						</mat-form-field>
+
+						<mat-form-field appearance="outline">
+							<input matInput id="time" type="text" formControlName="time" pattern="{{TIME_PATTERN}}"
+								placeholder="{{'internaciones.discharge.TIME' | translate}}">
+
+							<mat-error *ngIf="hasError(dischargeForm, 'pattern', 'time')"
+								translate="internaciones.discharge.TIME_FORMAT">
+							</mat-error>
+							<mat-error *ngIf="hasError(dischargeForm, 'required', 'time')" translate="forms.REQUIRED">
+							</mat-error>
+							<mat-error *ngIf="hasError(dischargeForm, 'futureTime', 'time')"
+								translate="internaciones.discharge.MAX_TIME_ERROR"></mat-error>
+						</mat-form-field>
+					</div>
+				</section>
 
 				<span [translate]="'internaciones.discharge.DISCHARGE_TYPE'"></span> *
-				<div>
+				<section>
 					<mat-form-field appearance="outline">
-						<mat-select id="dischargeTypeId"
-									name="dischargeTypeId"
-									formControlName="dischargeTypeId"
-									placeholder="{{'internaciones.discharge.DISCHARGE_TYPE' | translate}}">
-							<mat-option *ngFor="let dischargeType of dischargeTypes"
-										[value]="dischargeType.id">
+						<mat-select id="dischargeTypeId" name="dischargeTypeId"formControlName="dischargeTypeId"
+							placeholder="{{'internaciones.discharge.DISCHARGE_TYPE' | translate}}">
+							<mat-option *ngFor="let dischargeType of dischargeTypes"[value]="dischargeType.id">
 								{{dischargeType.description}}
 							</mat-option>
 						</mat-select>
 						<mat-error [translate]="'forms.REQUIRED'"></mat-error>
 					</mat-form-field>
-				</div>
+				</section>
 				<div class="form-buttons">
 					<button mat-stroked-button color="secondary" type="button" (click)="back()">
 						<span [translate]="'buttons.BACK'"></span>
