--- a/front-end/apps/projects/hospital/src/app/modules/turnos/turnos-mixins.scss
+++ b/front-end/apps/projects/hospital/src/app/modules/turnos/turnos-mixins.scss
@@ -1,5 +1,7 @@
 @import "./routes/agenda/agenda.component.scss-theme.scss";
+@import "./dialogs/appointment/appointment.component.scss-theme.scss";
 
 @mixin turnos-mixins($theme) {
     @include app-agenda($theme);
+    @include app-appointment($theme);
 }
