tg-6175 [FE] Agregar dialogo de advertencia al cambiar de pantalla

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/routes/ambulatoria-paciente/ambulatoria-paciente.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/routes/ambulatoria-paciente/ambulatoria-paciente.component.html
@@ -108,7 +108,8 @@
 							<span>ODONTOLOGÍA</span>
 						</ng-template>
 						<ng-template matTabContent>
-							<app-odontogram (consultationCompleted)="updateFields($event)"></app-odontogram>
+							<app-odontogram (isOpenOdontologyConsultation)="setStateConsultationOdontology($event)"
+								(consultationCompleted)="updateFields($event)"></app-odontogram>
 						</ng-template>
 					</mat-tab>
 
