--- a/front-end/apps/projects/hospital/src/app/modules/pacientes/routes/edit-patient/edit-patient.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/pacientes/routes/edit-patient/edit-patient.component.html
@@ -265,15 +265,32 @@
 							placeholder="{{'pacientes.form.ADDRESS_QUARTER' | translate}}" matInput>
 					</mat-form-field>
 				</div>
-
-				<div>
-					<span [translate]="'pacientes.form.PHONE_NUMBER'"></span>
+				<div class="form-row">
+					<div>
+						<div>
+							<span [translate]="'pacientes.form.PHONE_PREFIX'"></span>
+						</div>
+						<mat-form-field appearance="outline">
+							<input id="phonePrefix" name="phonePrefix" (keyup)="updatePhoneValidators()" formControlName="phonePrefix" maxlength="10"
+								   placeholder="{{'pacientes.form.PHONE_PREFIX' | translate}}" matInput>
+							<mat-error *ngIf="hasError(form, 'required', 'phonePrefix')">
+								<span translate="forms.REQUIRED"></span>
+							</mat-error>
+						</mat-form-field>
+					</div>
+					<div>
+						<div>
+							<span [translate]="'pacientes.form.PHONE_NUMBER'"></span>
+						</div>
+						<mat-form-field appearance="outline">
+							<input id="phoneNumber" (keyup)="updatePhoneValidators()" name="phoneNumber" formControlName="phoneNumber" maxlength="15"
+								   placeholder="{{'pacientes.form.PHONE_NUMBER' | translate}}" matInput>
+							<mat-error *ngIf="hasError(form, 'required', 'phoneNumber')">
+								<span translate="forms.REQUIRED"></span>
+							</mat-error>
+						</mat-form-field>
+					</div>
 				</div>
-				<mat-form-field appearance="outline">
-					<input id="phoneNumber" name="phoneNumber" formControlName="phoneNumber" maxlength="15"
-						placeholder="{{'pacientes.form.PHONE_NUMBER' | translate}}" matInput>
-				</mat-form-field>
-
 				<div>
 					<span [translate]="'pacientes.form.EMAIL'"></span>
 				</div>
