tg-6141 [FE] Modifica los colores de los appointments de la agenda en base a los estados del mismo.

--- a/front-end/apps/projects/hospital/src/app/modules/turnos/routes/agenda/agenda.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/turnos/routes/agenda/agenda.component.html
@@ -50,6 +50,7 @@
 									 *ngSwitchCase="calendarViewEnum.Month"
 									 [viewDate]="viewDate"
 									 [events]="appointments"
+									 [refresh]= "refreshCalendar"
 									 [weekStartsOn]="MONDAY"
 									 [cellTemplate]="customCellTemplate"
 									 (beforeViewRender)="loadDailyAmounts($event)"
@@ -61,6 +62,7 @@
 									*ngSwitchCase="calendarViewEnum.Week"
 									[viewDate]="viewDate"
 									[events]="appointments"
+									[refresh]= "refreshCalendar"
 									[dayStartHour]="dayStartHour" [dayEndHour]="dayEndHour"
 									[hourSegmentTemplate]="hourSegmentTemplate"
 									[headerTemplate]="headerTemplate"
@@ -76,6 +78,7 @@
 								   *ngSwitchCase="calendarViewEnum.Day"
 								   [viewDate]="viewDate"
 								   [events]="appointments"
+								   [refresh]= "refreshCalendar"
 								   [hourSegments]="hourSegments"
 								   [hourSegmentTemplate]="hourSegmentTemplate"
 								   [dayStartHour]="dayStartHour" [dayEndHour]="dayEndHour"
