--- a/front-end/apps/projects/hospital/src/app/modules/turnos/routes/agenda/agenda.component.scss
+++ b/front-end/apps/projects/hospital/src/app/modules/turnos/routes/agenda/agenda.component.scss
@@ -15,11 +15,11 @@ div.spinner {
 	::ng-deep {
 		.cal-week-view .cal-day-columns {
 			.bg-green {
-				background-color: #c9e7cb !important;
+				background-color: #D6FBD8!important;
 			}
 
 			.bg-blue {
-				background-color: #92c3e2 !important;
+				background-color: #FFF5E0 !important;
 			}
 
 			.cursor-pointer {
