--- a/front-end/apps/projects/hospital/src/app/modules/presentation/components/patient-card/patient-card.component.scss
+++ b/front-end/apps/projects/hospital/src/app/modules/presentation/components/patient-card/patient-card.component.scss
@@ -63,18 +63,33 @@ mat-card-subtitle {
 }
 
 #blood-type {
-	font-weight: bold;
 	font-size: 28px;
 	margin: 0;
 }
 
 #blood-type-container {
-	padding: 0 10px;
 	border-left: 1px solid #BDBDBD;
 	border-right: 1px solid #BDBDBD;
 	height: 100%;
 }
 
+#blood-type-container, #coverage-container {
+	padding: 0 10px;
+}
+
+#coverage-title{
+	margin-top: 2px;
+	margin-bottom: 2px;
+}
+
 .center-align {
 	text-align: center;
+}
+
+.bold {
+	font-weight: bold;
+}
+
+.no-information {
+	color: #a8a8a8;
 }
