tg-6245 [P2] No se actualizaron los colores de tipo de atención al crear y editar agenda

--- a/front-end/apps/projects/hospital/src/app/modules/turnos/routes/agenda/agenda.component.scss
+++ b/front-end/apps/projects/hospital/src/app/modules/turnos/routes/agenda/agenda.component.scss
@@ -18,7 +18,7 @@ div.spinner {
 				background-color: #D6FBD8!important;
 			}
 
-			.bg-blue {
+			.bg-yellow {
 				background-color: #FFF5E0 !important;
 			}
 
